Go to http://github.com/plack/Plack/issues for the roadmap and known issues.

{{$NEXT}}

1.0044  2017-04-26 22:30:27 PDT
    [IMPROVEMENTS]
        - Allow passing an already-open listen socket to HTTP::Server::PSGI
          and add an option to do so in Plack::Test::Server.

1.0043  2017-02-21 19:00:31 PST
    [IMPROVEMENTS]
        - Fixed typo in docs #578 #584
        - Remove test that expects cookie to be delimited by comma #573
        - Stop upper-casing all header keys in Plack::Request->headers #585
        
1.0042  2016-09-28 22:37:33 PDT
    [BUG FIXES]
        - Revert: Allow passing an already-open listen socket to HTTP::Server::PSGI #550

1.0041  2016-09-25 14:24:07 PDT
    [BUG FIXES]
        - Fix ConditionalGET middleware in case both Last-Modified and ETag exist. #569
        - Handle Cookie values with quotes correctly (alh, kazeburo) #564, #567

    [IMPROVEMENTS]
        - Several documentation fixes and error message improvements #556, #557, #558, #559

1.0040  2016-04-01 09:57:06 PDT
    [INCOMPATIBLE CHANGES]
        - Fixes a mistake in the value of %D and %T in Accesslog::Timed middleware.
          This is due to a bug in Apache::LogFormat::Compiler that sets a wrong value
          for these fields. This bug has been fixed and now it emits what the documentation
          has always said, in the same way as how Apache's log format works.

          However, this is a BREAKING CHANGE if you are using '%D' or '%T' in your log
          formats, and you'll likely need to swap them if you need the same values as
          previously. Read https://github.com/plack/Plack/issues/549 for more details.
          (astj) #549, #551

    [IMPROVEMENTS]
        - Remove the use of HTTP::Body in favor of HTTP::Entity::Parser (kazeburo) #538
        - Increase the buffer size to 1MB for requests already buffered by the PSGI server
        - Allow passing an already-open listen socket to HTTP::Server::PSGI (ilmari) #550

    [BUG FIXES]